# binance-botquick

nowcore/: CMakeLists.txt  Common.cpp  Common.h  Common.py  Executor.cpp  Executor.h  Master_Logic_Bridge.h  Network.cpp  Network.h  Strategy.cpp  Strategy.h  brain.py  bridge.py  main.cpp  shm_commander.cpp  策略架构设计.md
nowcore/nowcore/: Executor.cpp  Network.cpp  Network.h  main.cpp
nowcore/quick/: NETWORK_ISSUES.md  check_remote_status.py  deploy.sh   hft_perf_guide.md  new_deploy.sh  read_flow_bin.cpp  run_test.sh  server_info.txt  start_nowcore.sh  toyo.pem  云端
nowcore/quick/design_documents/: brain.md
nowcore/quick/nowcore/: Network.cpp  Network.h  Strategy.h
